--- a/js/singlecellView.module.css
+++ b/js/singlecellView.module.css
@@ -11,7 +11,8 @@
 .title {
 	display: flex;
 	flex-wrap: wrap;
-	align-items: flex-start;
+	align-items: flex-end;
+	margin-right: 5px;
 	gap: 1rem; /* minimum space between elements */
 	flex-grow: 0;
 	flex-shrink: 0;
@@ -23,6 +24,14 @@
 	margin-right: 5px;
 	border: 1px solid black;
 	cursor: crosshair;
+	flex: 1;
+}
+
+.layerSelect {
+	min-width: 7rem;
+}
+
+.spacer {
 	flex: 1;
 }
 
