--- a/js/singlecellView.module.css
+++ b/js/singlecellView.module.css
@@ -69,6 +69,7 @@
     border: 1px solid rgb(0, 0, 0, 0.87);
     border-radius: 4px;
     margin-right: 4px;
+	padding: 0 16px 16px 0;
 }
 
 .scale {
