--- a/js/demo.module.css
+++ b/js/demo.module.css
@@ -15,6 +15,7 @@
 	width: 450px;
 	flex-shrink: 0;
 	height: 100%;
-	overflow-y: auto;
-	overflow-x: hidden;
+	overflow: hidden;
+	display: flex;
+	flex-direction: column;
 }
